# p3-miden

./: Cargo.toml  LICENSE-APACHE  Makefile  README.md
.github/actions/cleanup-runner/: action.yml
.github/actions/workspace-release/: action.yml
.github/workflows/: build.yml  lint.yml  release-dry-run.yml  release-publish.yml  test.yml
p3-miden-air/: Cargo.toml
p3-miden-air/src/: air.rs  builder.rs  filtered_builder.rs  lib.rs
p3-miden-fri/: Cargo.toml
p3-miden-fri/benches/: fold_even_odd.rs
p3-miden-fri/src/: config.rs  hiding_pcs.rs  lib.rs  proof.rs  prover.rs  two_adic_pcs.rs  verifier.rs
p3-miden-fri/tests/: fri.rs  pcs.rs
p3-miden-goldilocks/: Cargo.toml
p3-miden-goldilocks/benches/: bench_field.rs  extension.rs
p3-miden-goldilocks/src/: goldilocks.rs  poseidon2.rs
p3-miden-prover/: Cargo.toml
p3-miden-prover/src/: air.rs  check_constraints.rs  config.rs  folder.rs  lib.rs  logup.rs  manual_lookup_gadget.rs  periodic_tables.rs  proof.rs  prover.rs  symbolic_builder.rs  symbolic_expression.rs  symbolic_variable.rs  util.rs  verifier.rs
p3-miden-prover/tests/: fibonacci_air.rs  periodic_air.rs  perm_air.rs
p3-miden-uni-stark/: Cargo.toml
p3-miden-uni-stark/src/: check_constraints.rs  config.rs  sub_builder.rs  symbolic_expression.rs  symbolic_variable.rs
