[workspace]
members = [
  "p3-miden-air",
  "p3-miden-fri",
  "p3-miden-goldilocks",
  "p3-miden-prover",
  "p3-miden-uni-stark",
]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# Internal p3-miden crates
p3-miden-air = { path = "p3-miden-air", version = "0.4.0" }
p3-miden-fri = { path = "p3-miden-fri", version = "0.4.0" }
p3-miden-goldilocks = { path = "p3-miden-goldilocks", version = "0.4.0" }
p3-miden-prover = { path = "p3-miden-prover", version = "0.4.0" }
p3-miden-uni-stark = { path = "p3-miden-uni-stark", version = "0.4.0" }

# Upstream Plonky3 dependencies
p3-air = { version = "0.4.1", default-features = false }
p3-baby-bear = { version = "0.4.1", default-features = false }
p3-challenger = { version = "0.4.1", default-features = false }
p3-circle = { version = "0.4.1", default-features = false }
p3-commit = { version = "0.4.1", default-features = false }
p3-dft = { version = "0.4.1", default-features = false }
p3-field = { version = "0.4.1", default-features = false }
p3-field-testing = { version = "0.4.1", default-features = false }
p3-fri = { version = "0.4.1", default-features = false }
p3-goldilocks = { version = "0.4.1", default-features = false }
p3-interpolation = { version = "0.4.1", default-features = false }
p3-keccak = { version = "0.4.1", default-features = false }
p3-matrix = { version = "0.4.1", default-features = false }
p3-maybe-rayon = { version = "0.4.1", default-features = false }
p3-mds = { version = "0.4.1", default-features = false }
p3-merkle-tree = { version = "0.4.1", default-features = false }
p3-mersenne-31 = { version = "0.4.1", default-features = false }
p3-poseidon = { version = "0.4.1", default-features = false }
p3-poseidon2 = { version = "0.4.1", default-features = false }
p3-symmetric = { version = "0.4.1", default-features = false }
p3-uni-stark = { version = "0.4.1", default-features = false }
p3-util = { version = "0.4.1", default-features = false }

# Third-party dependencies
criterion = { version = "0.8", features = ["html_reports"] }
itertools = { version = "0.14.0", default-features = false, features = [
  "use_alloc",
] }
rand = { version = "0.9", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tracing = { version = "0.1.37", default-features = false, features = [
  "attributes",
] }
