[workspace]
members = [
    "p3-miden-fri",
    "p3-miden-goldilocks",
    "p3-miden-prover",
]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# Internal p3-miden crates
p3-miden-fri = { path = "p3-miden-fri", version = "0.4.0" }
p3-miden-goldilocks = { path = "p3-miden-goldilocks", version = "0.4.0" }
p3-miden-prover = { path = "p3-miden-prover", version = "0.4.0" }

# Upstream Plonky3 dependencies
p3-air = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-circle = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-commit = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-field = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-field-testing = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-fri = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-interpolation = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-lookup = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-mds = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-mersenne-31 = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-poseidon = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }
p3-util = { git = "https://github.com/Plonky3/Plonky3", branch = "main", default-features = false }

# Third-party dependencies
criterion = { version = "0.8", features = ["html_reports"] }
itertools = { version = "0.14.0", default-features = false, features = ["use_alloc"] }
rand = { version = "0.9", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tracing = { version = "0.1.37", default-features = false, features = ["attributes"] }

# Patch to use local Plonky3 with Entry::Periodic
[patch."https://github.com/Plonky3/Plonky3"]
p3-air = { path = "../Plonky3/air" }
p3-baby-bear = { path = "../Plonky3/baby-bear" }
p3-challenger = { path = "../Plonky3/challenger" }
p3-circle = { path = "../Plonky3/circle" }
p3-commit = { path = "../Plonky3/commit" }
p3-dft = { path = "../Plonky3/dft" }
p3-field = { path = "../Plonky3/field" }
p3-field-testing = { path = "../Plonky3/field-testing" }
p3-fri = { path = "../Plonky3/fri" }
p3-goldilocks = { path = "../Plonky3/goldilocks" }
p3-interpolation = { path = "../Plonky3/interpolation" }
p3-keccak = { path = "../Plonky3/keccak" }
p3-lookup = { path = "../Plonky3/lookup" }
p3-matrix = { path = "../Plonky3/matrix" }
p3-maybe-rayon = { path = "../Plonky3/maybe-rayon" }
p3-mds = { path = "../Plonky3/mds" }
p3-merkle-tree = { path = "../Plonky3/merkle-tree" }
p3-mersenne-31 = { path = "../Plonky3/mersenne-31" }
p3-poseidon = { path = "../Plonky3/poseidon" }
p3-poseidon2 = { path = "../Plonky3/poseidon2" }
p3-symmetric = { path = "../Plonky3/symmetric" }
p3-uni-stark = { path = "../Plonky3/uni-stark" }
p3-util = { path = "../Plonky3/util" }
