[workspace]
members = [
  "p3-miden-air",
  "p3-miden-fri",
  "p3-miden-prover",
  "p3-miden-uni-stark",
]
resolver = "3"

[workspace.package]
version = "0.4.1"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
repository = "https://github.com/0xMiden/p3-miden"
readme = "README.md"
homepage = "https://github.com/0xMiden/p3-miden"

[workspace.dependencies]

# Third-party dependencies
criterion = { version = "0.8", features = ["html_reports"] }
itertools = { version = "0.14.0", default-features = false, features = [
  "use_alloc",
] }

# Upstream Plonky3 dependencies
p3-air = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-baby-bear = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-challenger = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-circle = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-commit = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-dft = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-field = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-field-testing = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-fri = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-goldilocks = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-interpolation = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-keccak = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-matrix = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-maybe-rayon = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-mds = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-merkle-tree = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-mersenne-31 = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-poseidon = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-poseidon2 = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-symmetric = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-uni-stark = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }
p3-util = { branch = "main", default-features = false, git = "https://github.com/Plonky3/Plonky3" }

# Internal p3-miden crates
p3-miden-air = { path = "p3-miden-air", version = "0.4.1" }
p3-miden-fri = { path = "p3-miden-fri", version = "0.4.1" }
p3-miden-prover = { path = "p3-miden-prover", version = "0.4.1" }
p3-miden-uni-stark = { path = "p3-miden-uni-stark", version = "0.4.1" }

rand = { version = "0.9", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
tracing = { version = "0.1.37", default-features = false, features = [
  "attributes",
] }
