[package]
name = "p3-miden-goldilocks"
description = "Miden variant of Goldilocks field with public const constructors."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
p3-challenger.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-mds.workspace = true
p3-poseidon2.workspace = true
p3-symmetric.workspace = true
p3-util.workspace = true

num-bigint = { version = "0.4.3", default-features = false }
paste = "1.0.15"
rand.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
p3-field-testing.workspace = true
p3-poseidon.workspace = true

criterion.workspace = true
rand.workspace = true

[[bench]]
name = "bench_field"
harness = false

[[bench]]
name = "extension"
harness = false
